# Authenticator

./: README.md  uart.c  uart.h
authenticator/: Makefile  ring_buffer.h  uart.c  uart.h
authenticator/ecc/: Mersenne_twister.c  asm_avr.inc  uECC.c  uECC.h
authenticator/uECC/: uECC.h
client/: README.md  pyproject.toml
client/tests/: device.py
client/yubino/: device.py  main.py  web.py
client/yubino.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ecc/: uECC.c
uECC/: Makefile  Mersenne_twister.c  main.c
